--- a/index.html
+++ b/index.html
@@ -29,5 +29,116 @@
             </ul>
         </div>
     </section>
+    <section class="cards">
+        <!-- card1  -->
+        <section class="card1">
+            <div class="mobileimage1"></div>
+            <h2>Tonic</h2>
+            <ul class="mobile">
+                <li class="company">CANOPY</li>
+                <li>Back End Dev</li>
+                <li>2013</li>
+            </ul>
+            <p class="mobile-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <div class="teck">
+                <ul class="teck-list">
+                    <li><button class="mobile-btn" type="submit">HTML</button></li>
+                    <li><button class="mobile-btn" type="submit">CSS</button></li>
+                    <li><button class="mobile-btn" type="submit">JavaScript</button></li>
+                </ul>
+            </div>
+            <button class="see-mobile-btn" type="submit">See Projects</button>
+        </section>
+        <!-- card2  -->
+        <section class="card2">
+            <div class="mobileimage2"></div>
+            <h3>Multi-Post <br> Stories</h3>
+            <ul class="mobile">
+                <li class="company">CANOPY</li>
+                <li>Back End Dev</li>
+                <li>2013</li>
+            </ul>
+            <p class="mobile-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <div class="teck">
+                <ul class="teck-list">
+                    <li><button class="mobile-btn" type="submit">HTML</button></li>
+                    <li><button class="mobile-btn" type="submit">CSS</button></li>
+                    <li><button class="mobile-btn" type="submit">JavaScript</button></li>
+                </ul>
+            </div>
+            <button class="see-mobile-btn" type="submit">See Projects</button>
+        </section>
+        <!-- card 3 -->
+        <section class="card3">
+            <div class="mobileimage3"></div>
+            <h4>Tonic</h4>
+            <ul class="mobile">
+                <li class="company">CANOPY</li>
+                <li>Back End Dev</li>
+                <li>2013</li>
+            </ul>
+            <p class="mobile-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <div class="teck">
+                <ul class="teck-list">
+                    <li><button class="mobile-btn" type="submit">HTML</button></li>
+                    <li><button class="mobile-btn" type="submit">CSS</button></li>
+                    <li><button class="mobile-btn" type="submit">JavaScript</button></li>
+                </ul>
+            </div>
+            <button class="see-mobile-btn" type="submit">See Projects</button>
+        </section>
+        <!-- card4 -->
+        <section class="card4">
+            <div class="mobileimage4"></div>
+            <h3>Multi-Post <br> Stories</h3>
+            <ul class="mobile">
+                <li class="company">CANOPY</li>
+                <li>Back End Dev</li>
+                <li>2013</li>
+            </ul>
+            <p class="mobile-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <div class="teck">
+                <ul class="teck-list">
+                    <li><button class="mobile-btn" type="submit">HTML</button></li>
+                    <li><button class="mobile-btn" type="submit">CSS</button></li>
+                    <li><button class="mobile-btn" type="submit">JavaScript</button></li>
+                </ul>
+            </div>
+            <button class="see-mobile-btn" type="submit">See Projects</button>
+        </section>
+    </section>
+       <!-- about area -->
+        <section class="about">
+            <h5>About Myself</h5>
+            <p class="about-p">Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+            <span>LET'S CONNECT</span>
+            <ul class="media-links">
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-m"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-angellist"></i></a></li> 
+            </ul>
+            <button class="resume-mobile-btn" type="submit">Get my resume</button>
+            <div class="lang-area">
+                <div class="stacknav">
+                    <strong>Languages</strong>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="stacks">
+                    <button class="html" type="submit"><a href="#">HTML</a></button>
+                    <button class="css" type="submit"><a href="#">CSS</a></button>
+                    <button class="js" type="submit"><a href="#">JavaScript</a></button>
+                </div>
+                <div class="frameworks">
+                    <strong>Frameworks</strong>
+                    <i class="fa-solid fa-angle-right"></i>
+                </div>
+                <div class="skills">
+                    <strong>Skills</strong>
+                    <i class="fa-solid fa-angle-right"></i>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
