--- a/index.html
+++ b/index.html
@@ -120,25 +120,37 @@
                 <li><a href="#"><i class="fa-brands fa-angellist"></i></a></li> 
             </ul>
             <button class="resume-mobile-btn" type="submit">Get my resume</button>
-            <div class="lang-area">
-                <div class="stacknav">
-                    <strong>Languages</strong>
+            <ul class="lang-area">
+                <ul class="stacknav">
+                    <li>
+                        <strong>Languages</strong>
+                    </li>
+                    <li>
                     <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="stacks">
+                    </li>
+                </ul>
+                <ul class="stacks">
+                    <li>
                     <button class="html" type="submit"><a href="#">HTML</a></button>
+                    </li>
+                    <li>
                     <button class="css" type="submit"><a href="#">CSS</a></button>
+                    </li>
+                    <li>
                     <button class="js" type="submit"><a href="#">JavaScript</a></button>
-                </div>
-                <div class="frameworks">
-                    <strong>Frameworks</strong>
-                    <i class="fa-solid fa-angle-right"></i>
-                </div>
-                <div class="skills">
-                    <strong>Skills</strong>
-                    <i class="fa-solid fa-angle-right"></i>
-                </div>
-            </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="frameworks">
+                        <strong>Frameworks</strong>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </li>
+                    <li class="skills">
+                        <strong>Skills</strong>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </li>
+                </ul>
+            </ul>
         </section>
 </body>
 </html>
