--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header -->
     <header class="header">
         <nav class="navbar">
             <a href="#">My Logo</a>
