Update index file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- header -->
     <header class="header">
         <nav class="navbar">
             <a href="#">My Logo</a>
@@ -123,33 +122,23 @@
             <button class="resume-mobile-btn" type="submit">Get my resume</button>
             <ul class="lang-area">
                 <ul class="stacknav">
-                    <li>
-                        <strong>Languages</strong>
-                    </li>
-                    <li>
-                    <i class="fa-solid fa-angle-down"></i>
-                    </li>
+                    <li><strong>Languages</strong></li>
+                    <li><i class="fa-solid fa-angle-down"></i></li>
                 </ul>
                 <ul class="stacks">
-                    <li>
-                    <button class="html" type="submit"><a href="#">HTML</a></button>
-                    </li>
-                    <li>
-                    <button class="css" type="submit"><a href="#">CSS</a></button>
-                    </li>
-                    <li>
-                    <button class="js" type="submit"><a href="#">JavaScript</a></button>
-                    </li>
+                    <li><button class="html" type="submit"><a href="#">HTML</a></button></li>
+                    <li><button class="css" type="submit"><a href="#">CSS</a></button></li>
+                    <li><button class="js" type="submit"><a href="#">JavaScript</a></button></li>
                 </ul>
                 <ul>
-                    <li class="frameworks">
-                        <strong>Frameworks</strong>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </li>
-                    <li class="skills">
-                        <strong>Skills</strong>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </li>
+                    <ul class="frameworks">
+                        <li><strong>Frameworks</strong></li>
+                        <li><i class="fa-solid fa-angle-right"></i></li>
+                    </ul>
+                    <ul class="skills">
+                        <li><strong>Skills</strong></li>
+                        <li><i class="fa-solid fa-angle-right"></i></li>
+                    </ul>
                 </ul>
             </ul>
         </section>
