--- a/index.html
+++ b/index.html
@@ -107,40 +107,51 @@
             <button class="see-mobile-btn" type="submit">See Projects</button>
         </section>
     </section>
-       <!-- about area -->
-        <section class="about">
-            <h5>About Myself</h5>
-            <p class="about-p">Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-            <span>LET'S CONNECT</span>
-            <ul class="media-links">
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-m"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-angellist"></i></a></li> 
+    <!-- about area -->
+    <section class="about">
+        <h5>About Myself</h5>
+        <p class="about-p">Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+        <span>LET'S CONNECT</span>
+        <ul class="media-links">
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-m"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-angellist"></i></a></li> 
+        </ul>
+        <button class="resume-mobile-btn" type="submit">Get my resume</button>
+        <ul class="lang-area">
+            <ul class="stacknav">
+                <li><strong>Languages</strong></li>
+                <li><i class="fa-solid fa-angle-down"></i></li>
             </ul>
-            <button class="resume-mobile-btn" type="submit">Get my resume</button>
-            <ul class="lang-area">
-                <ul class="stacknav">
-                    <li><strong>Languages</strong></li>
-                    <li><i class="fa-solid fa-angle-down"></i></li>
+            <ul class="stacks">
+                <li><button class="html" type="submit"><a href="#">HTML</a></button></li>
+                <li><button class="css" type="submit"><a href="#">CSS</a></button></li>
+                <li><button class="js" type="submit"><a href="#">JavaScript</a></button></li>
+            </ul>
+            <ul>
+                <ul class="frameworks">
+                    <li><strong>Frameworks</strong></li>
+                    <li><i class="fa-solid fa-angle-right"></i></li>
                 </ul>
-                <ul class="stacks">
-                    <li><button class="html" type="submit"><a href="#">HTML</a></button></li>
-                    <li><button class="css" type="submit"><a href="#">CSS</a></button></li>
-                    <li><button class="js" type="submit"><a href="#">JavaScript</a></button></li>
-                </ul>
-                <ul>
-                    <ul class="frameworks">
-                        <li><strong>Frameworks</strong></li>
-                        <li><i class="fa-solid fa-angle-right"></i></li>
-                    </ul>
-                    <ul class="skills">
-                        <li><strong>Skills</strong></li>
-                        <li><i class="fa-solid fa-angle-right"></i></li>
-                    </ul>
+                <ul class="skills">
+                    <li><strong>Skills</strong></li>
+                    <li><i class="fa-solid fa-angle-right"></i></li>
                 </ul>
             </ul>
+        </ul>
+    </section>
+        <!-- contact me  -->
+        <section class="contact">
+            <div class="contact-bg-img">
+                <h6>Contact me</h6>
+                <p class="contact-p">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+                I’d love to help with it!</p>
+                <textarea name="message" id="" cols="15" rows="10">Write tour message here...</textarea>
+            </div>
+            <button class="contact-mobile-btn" type="submit">Get in touch</button>
+            <img src="/images/home-btn.png" alt="" class="home-btn">
         </section>
 </body>
 </html>
