Added name and email fields and applied CSS to them

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
                 <h6>Contact me</h6>
                 <p class="contact-p">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
                 I’d love to help with it!</p>
+                <input type="text" placeholder="Lorem Ipsum">
+                <input type="email" placeholder="loremipsum@gmail.com">
                 <textarea name="message" id="" cols="15" rows="10">Write tour message here...</textarea>
             </div>
             <button class="contact-mobile-btn" type="submit">Get in touch</button>
