Update the index file

--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
                 <label for="msg">Message:</label>
                 <textarea name="user_name" id="msg" cols="15" rows="10" maxlength="500" required>Write your message here...</textarea>
                 <button class="contact-mobile-btn" type="submit">Get in touch</button>
-            <div>
-                <img src="/images/home-btn.png" alt="home-button" class="home-btn">
-            </div>
             </form>
+        </div>
+        <div class="home-btn">
         </div>
     </section>
 </body>
