--- a/index.html
+++ b/index.html
@@ -201,21 +201,22 @@
         </ul>
     </section>
         <!-- contact me  -->
-    <section class="contact">
-        <div class="contact-bg-img"></div>
-                <h6>Contact me</h6>
-                <p class="contact-p">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
-                I’d love to help with it!</p>
-                <form action="https://formspree.io/f/xjvdador" method="post">
-                    <label for="name">Name:</label>
-                    <input type="name" id="name" name="user_name" placeholder="Lorem Ipsum" maxlength="30" required>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="user_name" placeholder="loremipsum@gmail.com" required>
-                    <label for="msg">Message:</label>
-                    <textarea name="user_name" id="msg" cols="15" rows="10" maxlength="500" required>Write your message here...</textarea>
-                    <button class="contact-mobile-btn" type="submit">Get in touch</button>
-                </form>
-            <div class="home-btn"></div>
+    <section class="contactSection">
+        <div class="contactMobileBg">
+            <h6>Contact me</h6>
+            <p class="contact-p">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+            I’d love to help with it!</p>
+            <form action="https://formspree.io/f/xjvdador" method="post">
+                <label for="name">Name:</label>
+                <input type="name" id="name" name="user_name" placeholder="Lorem Ipsum" maxlength="30" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="user_name" placeholder="loremipsum@gmail.com" required>
+                <label for="msg">Message:</label>
+                <textarea name="user_name" id="msg" cols="15" rows="10" maxlength="500" required>Write your message here...</textarea>
+                <button class="contact-mobile-btn" type="submit">Get in touch</button>
+            </form>
+        </div>
+        <div class="home-btn"></div>
     </section>
 </body>
 </html>
