Modifies the index.html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="navbar" >
-            <a href="#">My Logo</a>
+            <a class="logo" href="#">My Logo</a>
             <i class="fa-solid fa-bars"></i>
             <ul class="menu">
                 <li class="list"><a href="">Portfolio</a></li>
