--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <header class="header">
         <nav class="navbar">
             <a class="logo" href="#">My Logo</a>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
             <ul class="menu">
                 <li class="list"><a href="#">Portfolio</a></li>
                 <li class="list"><a href="#">About</a></li>
