Modifies the index.html by adding the path links to the about and contact page section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <ul class="menu">
                 <li class="list"><a href="#">Portfolio</a></li>
-                <li class="list"><a href="#">About</a></li>
-                <li class="list"><a href="#">Contact</a></li>
+                <li class="list"><a href="#about-page">About</a></li>
+                <li class="list"><a href="#contact-page">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -169,7 +169,7 @@
         </section>
     </section>
     <!-- about area -->
-    <section class="about">
+    <section class="about" id="about-page">
         <div class="about-grid-column">
             <h5>About Myself</h5>
             <p class="about-p">Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
@@ -206,7 +206,7 @@
         </ul>
     </section>
         <!-- contact me  -->
-    <section class="contactSection">
+    <section class="contactSection" id="contact-page">
         <div class="contactMobileBg">
             <h6>Contact me</h6>
             <p class="contact-p">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
