--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="bar"></span>
             </div>
             <ul class="menu">
-                <li class="list"><a href="#">Portfolio</a></li>
+                <li class="list"><a href="#work-pages">Portfolio</a></li>
                 <li class="list"><a href="#about-page">About</a></li>
                 <li class="list"><a href="#contact-page">Contact</a></li>
             </ul>
@@ -39,7 +39,7 @@
             </ul>
         </div>
     </section>
-    <section class="cardSection">
+    <section class="cardSection" id="work-pages">
         <!-- cards1  -->
     <section class="cards">
         <div class="mobileimage1"></div>
