Update index.html file

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </label>
 
                             <button type="submit" class="contactBtn">Get in touch</button>
-                            <span class="return-error-message"></span>
+                            <span class="return-error-message" id="return-success-message"></span>
                         </form>
                         <div class="shape"></div>
                     </div>
