Update the index.html file

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         </ul><hr>
                         <div class="liveSource">
                             <button class="seeLive">
-                                <a href="#">see live<img src="/images/goLiveIcon.png" alt=""></a>
+                                <a href="#">see live<img src="images/goLiveIcon.png" alt=""></a>
                             </button>
                             <button class="seeSource">
                                 <a href="#">see source<i class="fa fa-github"></i></a>
