Update index.html file

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
                             <li class="deskList"><a href="#" class="deskLink popup-deskLink4">BootStrap</a></li>
                         </ul><hr>
                         <div class="liveSource">
-                            <button class="seeLive">
+                            <button type="submit" class="seeLive">
                                 <a href="#">see live<img src="images/goLiveIcon.png" alt=""></a>
                             </button>
-                            <button class="seeSource">
+                            <button type="submit"  class="seeSource">
                                 <a href="#">see source<i class="fa fa-github"></i></a>
                             </button>
                         </div>
