Modifies index.html file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             ></a>
           </li>
           <li>
+            <a href="https://www.facebook.com/efmomoh/" target="_blank"
+              ><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
             <a href="https://www.linkedin.com/in/efmomoh/" target="_blank"
               ><i class="fa fa-linkedin"></i
             ></a>
@@ -97,6 +101,10 @@
                   <a href="https://github.com/efmomoh" target="_blank"
                     ><i class="fa fa-github"></i
                   ></a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/efmomoh/" target="_blank"
+                    ><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
                   <a href="https://www.linkedin.com/in/efmomoh/" target="_blank"
