Update index dot html file

--- a/index.html
+++ b/index.html
@@ -46,16 +46,23 @@
         <p class="connect">LET'S CONNECT</p>
         <ul class="social-media">
           <li>
-            <a href="https://twitter.com/efmomoh" target="_blank"
+            <a href="https://twitter.com/efmomoh" target="_blank" rel="noopener"
               ><i class="fa fa-twitter"></i
             ></a>
           </li>
           <li>
-            <a href="https://www.facebook.com/efmomoh/" target="_blank"
-              ><i class="fa fa-facebook"></i></a>
+            <a
+              href="https://www.facebook.com/efmomoh/"
+              target="_blank"
+              rel="noopener"
+              ><i class="fa fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/efmomoh/" target="_blank"
+            <a
+              href="https://www.linkedin.com/in/efmomoh/"
+              target="_blank"
+              rel="noopener"
               ><i class="fa fa-linkedin"></i
             ></a>
           </li>
@@ -63,12 +70,15 @@
             <a href="#"><i class="fa fa-medium"></i></a>
           </li>
           <li>
-            <a href="https://github.com/efmomoh" target="_blank"
+            <a href="https://github.com/efmomoh" target="_blank" rel="noopener"
               ><i class="fa fa-github"></i
             ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/efmomoh/" target="_blank"
+            <a
+              href="https://www.instagram.com/efmomoh/"
+              target="_blank"
+              rel="noopener"
               ><i class="fa fa-instagram"></i
             ></a>
           </li>
@@ -98,16 +108,26 @@
               <p class="connect">LET'S CONNECT</p>
               <ul class="social-media">
                 <li>
-                  <a href="https://github.com/efmomoh" target="_blank"
+                  <a
+                    href="https://github.com/efmomoh"
+                    target="_blank"
+                    rel="noopener"
                     ><i class="fa fa-github"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com/efmomoh/" target="_blank"
-                    ><i class="fa fa-facebook"></i></a>
+                  <a
+                    href="https://www.facebook.com/efmomoh/"
+                    target="_blank"
+                    rel="noopener"
+                    ><i class="fa fa-facebook"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/efmomoh/" target="_blank"
+                  <a
+                    href="https://www.linkedin.com/in/efmomoh/"
+                    target="_blank"
+                    rel="noopener"
                     ><i class="fa fa-linkedin"></i
                   ></a>
                 </li>
@@ -115,12 +135,18 @@
                   <a href="#"><i class="fa fa-angellist"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/efmomoh" target="_blank"
+                  <a
+                    href="https://twitter.com/efmomoh"
+                    target="_blank"
+                    rel="noopener"
                     ><i class="fa fa-twitter"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/efmomoh/" target="_blank"
+                  <a
+                    href="https://www.instagram.com/efmomoh/"
+                    target="_blank"
+                    rel="noopener"
                     ><i class="fa fa-instagram"></i
                   ></a>
                 </li>
@@ -285,6 +311,7 @@
                   <a
                     href="https://efmomoh.github.io/Capstone-Project-HTML-CSS-JS"
                     target="_blank"
+                    rel="noopener"
                     >see live<img src="images/goLiveIcon.png" alt=""
                   /></a>
                 </button>
@@ -292,6 +319,7 @@
                   <a
                     href="https://efmomoh.github.io/Capstone-Project-HTML-CSS-JS/"
                     target="_blank"
+                    rel="noopener"
                     >see source<i class="fa fa-github"></i
                   ></a>
                 </button>
